<resources>
    <string name="app_name">Camp22 Quiz Prep</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_quiz">Take\nQuiz</string>
    <string name="study">Study</string>
    <string name="preferred_version">Preferred Version</string>
    <string name="chapter_id_format">GEN\n %d</string>
    <string name="change_bible_version">Change bible version</string>
    <string name="home">Home</string>
    <string name="label_verses_fragment">{chapter_id}</string>
    <string name="verses_format">%d. %s</string>
    <string name="sample_verse">this is the account of Jacob’s family line. Joseph, a young man of seventeen, was tending the flocks with his brothers, the sons of Bilhah and the sons of Zilpah, his father’s wives, and he brought their father a bad report about them.</string>
    <string name="kjv">KJV</string>
    <string name="niv">NIV</string>
    <string name="search">Search</string>
    <string name="search_hint">search chapters</string>
    <string name="search_result_verse_id">Genesis %d:%d (%s)</string>
    <string name="all_chapters">All\nChapters</string>
    <string name="sample_question_long">Joseph\'s brothers said \"With whomsoever of thy servant it be found, both let him die, and we also will be ________\"?</string>
    <string name="sample_question_short">Who is Asenath\'s father?</string>
    <string name="sample_answer_long">To send one of them to fetch the youngest while the rest wait in prison</string>
    <string name="sample_answer_short">threescore and ten days</string>
    <string name="question_count">Question %d/%d</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="submit_quiz">Submit quiz</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="submit_this_quiz">Submit this quiz</string>
    <string name="quiz_result">You scored %d/%d</string>
    <string name="congratulations">Congratulations!</string>
    <string name="take_another_quiz">Take another quiz</string>
    <string name="quiz_review">Quiz Review</string>
    <string name="question_n">Question %d</string>
    <string name="correct_answer">Correct answer</string>
    <string name="your_answer">Your answer</string>
    <string name="quiz_review_answer_format">%s - Gen %d:%s (KJV)</string>
    <string name="icon_correct_or_wrong_answer">icon correct or wrong answer</string>
    <string name="no_answer_selected">no answer selected</string>
    <string name="app_info">app info</string>
    <string name="about_app">About App</string>
    <string name="app_information">This app is intended to be used in preparing for the quiz during the Abundant Life Youth Camp 2022. The App offers a means to study and take preparatory quizzes. The app provides the study in two bible versions KJV and NIV. However, The quizzes are based on KJV alone.\n\n\nowolabitito@gmail.com</string>
    <string name="verse_fragment">verse fragment</string>
    <string name="pref_key_chosen_question_ids">chosen question ids</string>
    <string name="pref_key_version">version</string>
    <string name="resume_quiz">Resume\nQuiz</string>
    <string name="there_are_unanswered_questions">There are unanswered question(s)</string>
    <string name="displays_questions_in_grid_view">displays questions in grid view</string>
    <string name="homescreen">homescreen</string>
    <string name="question_grid_fragment">question_grid_fragment</string>
    <string name="ids_current_questions">ids current question set</string>
</resources>