<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:padding="10dp"
        tools:background="@color/oxford_blue">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tv_question_decor"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/light_grey"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            tools:text="Question 1"/>

        <ImageView
            android:id="@+id/iv_correct_wrong"
            app:layout_constraintTop_toTopOf="@id/tv_question_decor"
            app:layout_constraintStart_toEndOf="@id/tv_question_decor"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_question_decor"
            android:contentDescription="@string/icon_correct_or_wrong_answer"
            tools:src="@drawable/ic_wrong_option"/>

        <TextView
            app:layout_constraintTop_toBottomOf="@id/tv_question_decor"
            android:id="@+id/tv_question_r"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            tools:text="@string/sample_question_long"/>

        <LinearLayout
            android:id="@+id/ll_user_choice"
            app:layout_constraintTop_toBottomOf="@id/tv_question_r"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_height="wrap_content"
            tools:visibility="visible">

            <TextView
                android:layout_marginTop="@dimen/question_review_item_margin"
                android:id="@+id/tv_user_choice_decor"
                android:layout_width="match_parent"
                android:textColor="@color/light_grey"
                android:textStyle="bold"
                android:text="@string/your_answer"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/no_answer_selected"
                android:textStyle="bold|italic"
                android:id="@+id/tv_user_choice"
                tools:text="farmers"/>
        </LinearLayout>


        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/ll_user_choice"
            android:id="@+id/ll_correct_answer"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/ripple_rectangular"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="@dimen/question_review_item_margin"
                android:id="@+id/tv_answer_decor"
                android:layout_width="match_parent"
                android:textColor="@color/light_grey"
                android:textStyle="bold"
                android:text="@string/correct_answer"
                android:layout_height="wrap_content" />

            <TextView
                app:layout_constraintTop_toBottomOf="@id/tv_answer_decor"
                android:id="@+id/tv_correct_answer"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/green"
                tools:text="bondsmen"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>