<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/oxford_blue"
        tools:context=".ui.fragments.QuizFragment">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp2_question"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cl_btns"/>


        <ImageView
            android:id="@+id/iv_question_grid"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_width="@dimen/question_grid_icon_size"
            android:layout_height="@dimen/question_grid_icon_size"
            android:background="@drawable/default_ripple"
            android:contentDescription="@string/displays_questions_in_grid_view"
            android:src="@drawable/ic_grid"
            android:layout_marginTop="@dimen/base_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_btns"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_next_submit"
                android:layout_width="wrap_content"
                android:text="@string/next"
                android:textAllCaps="false"
                android:layout_margin="@dimen/base_margin"
                app:layout_constraintStart_toEndOf="@id/btn_previous"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_previous"
                android:layout_width="wrap_content"
                android:text="@string/previous"
                android:textAllCaps="false"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/btn_next_submit"
                android:layout_margin="@dimen/base_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>