<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/base_padding"
        tools:background="@color/oxford_blue"
        tools:context=".ui.fragments.QuestionFragment">

        <TextView
            android:id="@+id/tv_question_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="372" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/rg_options"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_question_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_count"
                android:textColor="@color/light_grey"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_question"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_question_long"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_question_count"
                tools:text="@string/sample_question_short" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <RadioGroup
            android:id="@+id/rg_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_question">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_option1"
                style="@style/optionsRadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_option2"
                style="@style/optionsRadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_option3"
                style="@style/optionsRadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_option4"
                style="@style/optionsRadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>